--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,11 @@
+<h1>All Students:</h1>
+
+
 <div>
   <% @students.each do |student| %>
-    <div><%= link_to student.to_s, student_path(student) %></div>
+    <h2><div><%= link_to student.to_s, student_path(student) %></div></h2>
   <% end %>
+
+  <%= link_to "Make a new student", new_student_path() %>
+
 </div>
